--- a/app/frontend/src/app/websocket-servers/connection/connection.component.html
+++ b/app/frontend/src/app/websocket-servers/connection/connection.component.html
@@ -1,17 +1,14 @@
 <div class="flex flex-col w-full h-full min-h-0 relative text-white">
-  <h3 class="text-lg p-2">Request:</h3>
-  <label class="block uppercase tracking-wide text-gray-400 text-xs mb-1 ml-2" for="grid-zip">
-    Save Request To Requests List
-  </label>
+  <h3 class="text-lg p-2">Request</h3>
   <div class="w-full px-2 flex flex-shrink-0 items-center">
     <div class="min-w-0 w-full">
       <input [(ngModel)]="requestName" name="requestName"
         class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-1 px-2 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-        id="grid-zip" type="text" placeholder="Request Name. You can use '/' to group requests">
+        id="grid-zip" type="text" placeholder="Request Name. Use '/' to group requests">
     </div>
     <div class="flex-shrink-0 ml-2">
       <button class="btn btn-primary mr-2" (click)="saveRequest()">
-        Save
+        Save To Requests
       </button>
     </div>
   </div>
@@ -22,10 +19,10 @@
     <button class="btn btn-primary mr-2" (click)="sendRequest()">
       Send
     </button>
-    <p class="text-gray-400">Ctrl + Enter</p>
+    <p class="text-sm text-gray-400">Ctrl + Enter</p>
   </div>
   <div class="w-full p-2 flex flex-row flex-shrink-0">
-    <h3 class="text-lg mr-2">Response:</h3>
+    <h3 class="text-lg mr-2">Response</h3>
     <h3 class="text-lg text-danger" *ngIf="err">{{err}}</h3>
   </div>
   <div class="h-full min-h-0 flex-shrink relative">
