Add functional update checking, change header text color

--- a/app/frontend/src/app/requests/requests-list/requests-list.component.html
+++ b/app/frontend/src/app/requests/requests-list/requests-list.component.html
@@ -1,7 +1,7 @@
 <div class="w-full text-white flex flex-col">
   <div class="flex-shrink-0 raised-4 px-3 py-1 rounded rounded-b-none w-full flex">
     <div class="min-w-0 flex-shrink w-full">
-      <h1 class="text-xl">Requests</h1>
+      <h1 class="text-xl text-gray-500">Requests</h1>
     </div>
     <div class="cursor-pointer hover:text-primary p-1" title="Toggle show/hide incompatible requests" (click)="toggleHideIncompatible()">
       <h1 class="text-2xl flex align-center"><i class="flex" [class.ion-md-eye-off]="hideIncompatible" [class.ion-md-eye]="!hideIncompatible"></i></h1>
