--- a/app/frontend/src/app/servers/server-list/server-list.component.html
+++ b/app/frontend/src/app/servers/server-list/server-list.component.html
@@ -1,7 +1,7 @@
 <div class="w-full text-white flex flex-col">
   <div class="flex-shrink-0 raised-4 px-3 py-1 rounded rounded-b-none w-full flex">
     <div class="min-w-0 flex-shrink w-full">
-      <h1 class="text-xl">Servers</h1>
+      <h1 class="text-xl text-gray-500">Servers</h1>
     </div>
     <div class="cursor-pointer hover:text-primary p-1 mr-2" (click)="adding = true;" title="Add new server">
       <h1 class="text-2xl flex align-center"><i class="ion-md-add flex"></i></h1>
