--- a/app/frontend/src/app/settings/settings-page/settings-page.component.html
+++ b/app/frontend/src/app/settings/settings-page/settings-page.component.html
@@ -1,9 +1,26 @@
 <div class="text-white flex flex-col">
   <div class="p-2">
-    <h3 class="text-xl">Updates</h3>
+    <h3 class="text-xl text-gray-500">Updates</h3>
+    <div class="mt-1" *ngIf="status === UpdaterStatus.DownloadingUpdate">
+      <!-- <div class="progress smooth-1" [style.width.%]="downloadProgress"></div> -->
+      <app-spinner [size]="25"></app-spinner>
+    </div>
+    <div class="mt-1">
+      <h3 *ngIf="status === UpdaterStatus.NoUpdateAvailable">No update available</h3>
+      <h3 *ngIf="status === UpdaterStatus.UpdateAvailable">New version available: {{newVersion}}</h3>
+      <h3 *ngIf="status === UpdaterStatus.DownloadingUpdate">Downloading...</h3>
+      <h3 *ngIf="status === UpdaterStatus.CheckingUpdate">Checking for update...</h3>
+      <h3 *ngIf="status === UpdaterStatus.InstallingUpdate">Installing update...</h3>
+    </div>
+    <div class="mt-1">
+      <button class="btn btn-primary btn-outline mr-1" *ngIf="status === UpdaterStatus.NoUpdateAvailable || status === UpdaterStatus.UpdateAvailable"
+        (click)="checkUpdate()"><i class="ion-ios-refresh"></i> Check For Update</button>
+      <button class="btn btn-success btn-outline" *ngIf="status === UpdaterStatus.UpdateAvailable" (click)="install()"><i
+          class="ion-ios-cloud-download"></i> Download And Install Update</button>
+    </div>
   </div>
   <div class="p-2 flex flex-col">
-    <h3 class="text-xl">About</h3>
+    <h3 class="text-xl text-gray-500">About</h3>
     <p>Version 0.1.0</p>
     <p>License MIT</p>
   </div>
