--- a/app/frontend/src/app/websocket-servers/connection/connection.component.html
+++ b/app/frontend/src/app/websocket-servers/connection/connection.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col w-full h-full min-h-0 relative text-white">
-  <h3 class="text-lg p-2">Request</h3>
+  <h3 class="text-lg p-2 text-gray-500">Request</h3>
   <div class="w-full px-2 flex flex-shrink-0 items-center">
     <div class="min-w-0 w-full">
       <input [(ngModel)]="requestName" name="requestName"
@@ -22,7 +22,7 @@
     <p class="text-sm text-gray-400">Ctrl + Enter</p>
   </div>
   <div class="w-full p-2 flex flex-row flex-shrink-0">
-    <h3 class="text-lg mr-2">Response</h3>
+    <h3 class="text-lg mr-2 text-gray-500">Response</h3>
     <h3 class="text-lg text-danger" *ngIf="err">{{err}}</h3>
   </div>
   <div class="h-full min-h-0 flex-shrink relative">
